# movAI

./: .gitignore  Dockerfile  README.md  README.txt  YAPILACAKLAR.txt  app.py  mixpanel_notes.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci-pipeline.yml
k8s/: deployment.yaml  kubeconfig  secret.yaml  service.yaml
macvenv/: pyvenv.cfg
movai/: __init__.py  config.py  main.py
movai/routes/: __init__.py  chat.py  pages.py
movai/services/: ai.py  tmdb.py
static/css/: about.css  card.css  contact.css  home.css  navbar.css  welcome.css
static/img/: cohere-logo-ap-2024.avif
templates/: about.html  card.html  contact.html  home.html  navbar.html  welcome.html
tests/: test_app.py
